[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/scn_car_selection.gd" type="Script" id=1]
[ext_resource path="res://fonts/megaman10_font.tres" type="DynamicFont" id=2]

[node name="scn_car_selection" type="Node2D"]
script = ExtResource( 1 )

[node name="hbc_car_selection" type="HBoxContainer" parent="."]
margin_left = 19.3661
margin_top = 92.8142
margin_right = 1009.37
margin_bottom = 592.814
rect_min_size = Vector2( 500, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="btn_vampiremobil" type="Button" parent="hbc_car_selection"]
margin_left = 105.0
margin_right = 357.0
margin_bottom = 500.0
focus_neighbour_right = NodePath("../btn_snooper_hunter")
custom_fonts/font = ExtResource( 2 )
text = "Vampiremobile"
flat = true

[node name="btn_snooper_hunter" type="Button" parent="hbc_car_selection"]
margin_left = 367.0
margin_right = 640.0
margin_bottom = 500.0
focus_neighbour_left = NodePath("../btn_vampiremobil")
focus_neighbour_right = NodePath("../btn_speed_runner")
custom_fonts/font = ExtResource( 2 )
text = "Snooper Hunter"
flat = true

[node name="btn_speed_runner" type="Button" parent="hbc_car_selection"]
margin_left = 650.0
margin_right = 885.0
margin_bottom = 500.0
focus_neighbour_left = NodePath("../btn_snooper_hunter")
custom_fonts/font = ExtResource( 2 )
text = "Speed runner"
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 340.0
margin_top = 20.0
margin_right = 699.0
margin_bottom = 60.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Select your vehicle"
scroll_active = false

[connection signal="pressed" from="hbc_car_selection/btn_vampiremobil" to="." method="_on_btn_vampiremobil_pressed"]
[connection signal="pressed" from="hbc_car_selection/btn_snooper_hunter" to="." method="_on_btn_snooper_hunter_pressed"]
[connection signal="pressed" from="hbc_car_selection/btn_speed_runner" to="." method="_on_btn_speed_runner_pressed"]
